k8s/apps/httpbin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: httpbin-https
  hostnames:
    - zachb-httpbin.duckdns.org
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-redirect-to-https
  namespace: default
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: httpbin-http
  hostnames:
    - zachb-httpbin.duckdns.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
